--- a/Colour-Toggle-Assignment/index.html
+++ b/Colour-Toggle-Assignment/index.html
@@ -4,7 +4,7 @@
     <title>Colour Toggle</title>
     <script defer src="script.js"></script>
     <style>
-      @import "/styles.css";
+      @import "styles.css";
     </style>
   </head>
 
